--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
+    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/scrollingBG.js"></script>
     <title>alsolecki homepage</title>
   </head>
 
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+   
+    <main class="container">
+
+      <div id="root"></div>
+
+    </main>
+    
+    <canvas id="bg"></canvas>
+
+  
   </body>
 
 </html>
