mobile first redesign

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     </main>
     
-    <!-- <canvas id="bg"></canvas> -->
+    <!-- /// background animation /// -->
+    
+    <canvas id="bg"></canvas>
 
   
   </body>
