--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/src/scrollingBG.js"></script>
+    
     <title>alsolecki homepage</title>
   </head>
 
@@ -23,7 +24,7 @@
     
     <canvas id="bg"></canvas>
 
-  
+    <script type="module" src="/src/contactTarget.js"></script>
   </body>
 
 </html>
