--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     
     <canvas id="bg"></canvas>
 
+    <div class="point point-0">
+      <div class="label">1</div>
+    </div>
+
     <script type="module" src="/src/contactTarget.js"></script>
   </body>
 
