--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/src/scrollingBG.js"></script>
     
@@ -27,3 +27,8 @@
   </body>
 
 </html>
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Marcellus&family=Quicksand:wght@300;400&family=Raleway:ital,wght@0,100;0,400;1,200;1,300;1,500;1,600&display=swap" rel="stylesheet">
