--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/src/scrollingBG.js"></script>
     
-    <title>alsolecki homepage</title>
+    <title>Alex Solecki</title>
   </head>
 
   <body>
