--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&family=Urbanist:wght@100family=Dosis:wght@200&family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300&family=Urbanist:wght@100&display=swap" rel="stylesheet">
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/src/scrollingBG.js"></script>
     
